# villagers

./: Cargo.toml  README.md  ROADMAP.md  config.toml  package-lock.json
src/: camera.rs  chunk.rs  fps.rs  main.rs  mouse.rs  pathfinding.rs  physics.rs  villager.rs  world.rs
src/chunk/: components.rs  helpers.rs  mod.rs  systems.rs
src/chunk/block/: components.rs
src/chunk/cursor/: components.rs
src/mouse/: mod.rs  resources.rs  systems.rs
src/world/: mod.rs  resources.rs
