[package]
name = "villagers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
noise = "0.8.2"
pathfinding = "4.8.2"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3